# KnowledgePushAssistant

./: .gitignore  LICENSE  README.md  project-prompt.md  pyproject.toml  requirements.txt  run.py
.claude/: settings.json
.github/workflows/: release.yml
assets/: icon.icns
desktop/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
desktop/src/: App.tsx  styles.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: lib.rs  main.rs
desktop/src/components/: Dashboard.tsx  DetailOverlay.tsx  DomainManager.tsx  KnowledgeList.tsx  Settings.tsx  Sidebar.tsx  icons.tsx
desktop/src/core/: db.ts  defaults.ts  repository.ts  scheduler.ts  types.ts
desktop/src/core/agent/: ask.ts  service.ts
scripts/: build.sh  generate_icons.py  package_macos.sh  package_windows.bat  pre_release_check.sh
src/: config.py  main.py
src/agent/: defaults.py  react_loop.py  tools.py
src/llm/: client.py
src/scheduler/: push_scheduler.py
src/search/: web_search.py
src/storage/: migrations.py  models.py  repository.py
src/ui/: detail_window.py  knowledge_ask.py  knowledge_card.py  main_window.py  markdown_html.py  popup.py  sidebar.py  styles.py  title_bar.py  tray_notify.py  widgets.py
src/ui/pages/: agent_panel.py  chat.py  dashboard.py  domain_manager.py  knowledge.py  settings.py
