[project]
name = "KnowledgePushAssistant"
version = "1.0.0"
description = "AI-powered desktop knowledge push assistant with ReAct Agent"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Knowledge Push Contributors" }
]
requires-python = ">=3.10"
dependencies = [
    "PySide6-Essentials>=6.5.0",
    "openai>=1.0.0",
    "duckduckgo_search>=5.0.0",
    "SQLAlchemy>=2.0.0",
    "APScheduler>=3.10.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "markdown>=3.5.0",
]

[project.scripts]
knowledge-push = "src.main:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pyinstaller]
# PyInstaller build configuration
name = "KnowledgePushAssistant"
onefile = true
windowed = true
icon = "assets/icon.icns"
add_data = []
hidden_imports = [
    "sqlalchemy.ext.declarative",
    "pyside6.QtSql",
]
